--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,11 +6,11 @@ dependencies {
     compile files('libs/gson-2.6.2.jar')
     compile files('libs/volley.jar')
     //compile files('libs/android-support-v7-appcompat.jar')
-    compile project(':captivamobilesdk')
     compile 'com.android.support:appcompat-v7:25.1.0'
     compile 'com.android.support:support-v4:24.2.1'
     compile 'com.android.support:design:25.1.0'
     compile 'com.android.support:recyclerview-v7:25.1.0'
+    compile project(':CaptivaMobileSdk')
 }
 
 // This is required to compile AAR files from the libs folder.
@@ -25,17 +25,17 @@ android {
     // low as the API requirement of the highest feature in the code.  It does affect the Java
     // language version though... so if a later/current Java language version is required, use a
     // more current SDK version.
-    compileSdkVersion 25
+    compileSdkVersion 26
     // Note that the build tools version supports a lesser compiler version.
-    buildToolsVersion '25.0.2'
+    buildToolsVersion '27.0.0'
     defaultConfig {
-        applicationId 'captiva.mobile'
+        applicationId 'captiva.mobile.rest'
         // Bumped the minimum to API 16 (Jelly Bean). API 16 captures 88% of Android users as of July 2015.
         minSdkVersion 19
 
         // This is the highest version that the code has been tested to run on.  The code will run
         // on higher versions, but this is the version that has been tested/certified as the target.
-        targetSdkVersion 24
+        targetSdkVersion 26
         versionCode 1
         versionName "1.0"
     }
