--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Mar 23 09:29:17 GMT 2016
-sdk.dir=C\:\\Android\\sdk
+#Fri Feb 23 16:09:43 GMT 2018
+sdk.dir=C\:\\Users\\ghutchin\\AppData\\Local\\Android\\Sdk
